<resources>
    <string name="app_name">Acnetect</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="name">Nama</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="hello">Hello,</string>
    <string name="default_text">-</string>
    <string name="logout">Logout</string>
    <string name="change_language">Change Language</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="please_wait">Please wait...</string>
    <string name="please_field_your_name">Please field your name</string>
    <string name="please_field_your_confirm_password">Please field your confirm password</string>
    <string name="please_field_your_password_more_than_8">Please field your password more than 8</string>
    <string name="please_field_your_confirm_password_more_than_8">Please field your confirm password more than 8</string>
    <string name="your_password_didnt_match">Your password did\'nt match</string>
    <string name="please_field_your_old_password">Please field your old password</string>
    <string name="please_input_your_old_password_more_than_8">Please input your old password more than 8</string>
    <string name="please_field_your_new_password">Please field your new password</string>
    <string name="please_input_your_new_password_more_than_8">Please input your new password more than 8</string>
    <string name="please_field_your_confirm_new_password">Please field your confirm new password</string>
    <string name="please_input_your_confirm_new_password_more_than_8">Please input your confirm new password more than 8</string>
    <string name="success_change_pass">Congratulation, your password has been change</string>
    <string name="success_register">Congratulation, your account has been register</string>
    <string name="success_forgot_pass">Congratulation, your link reset password has been sent to your email, please check it!</string>
    <string name="please_field_your_email">Please field your email</string>
    <string name="please_use_valid_email">Please use valid email</string>
    <string name="please_field_your_password">Please field your password</string>
    <string name="from">from</string>
    <string name="icorporation">C22-PC381</string>
    <string name="deskripsi">Description:</string>
    <string name="penjelasan_jerawat">Penjelasan Jerawat</string>
    <string name="solusi">Solusi</string>
    <string name="penyebab">Penyebab</string>
    <string name="nama_acne">Nama Acne</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="have_an_account_login">Have an account? Login</string>
    <string name="welcome_to_acnetect">Welcome To Acnetect!</string>
    <string name="user_profile">User Profile</string>
    <string name="detail_article">Detail Acne</string>
    <string name="getting_know_acne_type">Getting know acne type</string>
</resources>