<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8EEEC"
    tools:context=".presentation.register.RegisterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_register"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:elevation="0dp"
        android:gravity="center_vertical"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageButton
            android:id="@+id/btn_close_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_close_24"
            android:layout_marginStart="@dimen/normal_100"
            app:tint="@android:color/darker_gray" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/top_background2" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_125"
                android:layout_marginRight="@dimen/normal_125"
                android:text="@string/register"
                android:textColor="#EA6D35"
                android:textSize="36sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                app:hintEnabled="false"
                android:layout_marginTop="@dimen/small_100"
                android:layout_marginStart="@dimen/normal_125"
                android:layout_marginEnd="@dimen/normal_125">

                <EditText
                    android:id="@+id/et_name_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_border"
                    android:paddingStart="@dimen/normal_100"
                    android:hint="@string/name"
                    android:fontFamily="@font/gilroyregular"
                    android:paddingEnd="@dimen/normal_100"
                    android:textColor="@color/black"
                    android:textColorHint="#4D000000"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                app:hintEnabled="false"
                android:layout_marginTop="@dimen/small_100"
                android:layout_marginStart="@dimen/normal_125"
                android:layout_marginEnd="@dimen/normal_125">

                <EditText
                    android:id="@+id/et_email_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_border"
                    android:paddingStart="@dimen/normal_100"
                    android:hint="@string/email"
                    android:fontFamily="@font/gilroyregular"
                    android:paddingEnd="@dimen/normal_100"
                    android:textColor="@color/black"
                    android:textColorHint="#4D000000"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                app:hintEnabled="false"
                app:endIconMode="password_toggle"
                android:layout_marginTop="@dimen/small_100"
                android:layout_marginStart="@dimen/normal_125"
                android:layout_marginEnd="@dimen/normal_125">

                <EditText
                    android:id="@+id/et_password_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_border"
                    android:paddingStart="@dimen/normal_100"
                    android:fontFamily="@font/gilroyregular"
                    android:hint="@string/password"
                    android:paddingEnd="@dimen/normal_100"
                    android:textColor="@color/black"
                    android:textColorHint="#4D000000"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                app:hintEnabled="false"
                app:endIconMode="password_toggle"
                android:layout_marginTop="@dimen/small_100"
                android:layout_marginStart="@dimen/normal_125"
                android:layout_marginEnd="@dimen/normal_125">

                <EditText
                    android:id="@+id/et_confirm_password_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_border"
                    android:paddingStart="@dimen/normal_100"
                    android:hint="@string/confirm_password"
                    android:fontFamily="@font/gilroyregular"
                    android:paddingEnd="@dimen/normal_100"
                    android:textColor="@color/black"
                    android:textColorHint="#4D000000"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/btn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/normal_100"
                    android:layout_marginEnd="@dimen/normal_200"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/btn_arraw1" />

                <TextView
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_an_account_login"
                    android:textSize="@dimen/body_1"
                    android:textStyle="bold"
                    android:textColor="#3B608C"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/normal_200"
                    android:layout_marginBottom="@dimen/small_100"
                    android:layout_marginStart="@dimen/normal_125"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/pb_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>