<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:navigationIcon="@drawable/ic_back"
            app:tint="@android:color/darker_gray">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAcne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_article"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/gilroybold"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="-12dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#ffffe1e1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/tvNamaAcne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/nama_acne"
                        android:fontFamily="@font/gilroybold"
                        android:textColor="#ffec2d2d"
                        android:textSize="12sp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#ffd0ffdb"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/tvPenyebab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/penyebab"
                        android:textColor="#ff2a7e2f"
                        android:fontFamily="@font/gilroyregular"
                        android:textSize="12sp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#B8E9FF"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/tvSolusi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/solusi"
                        android:fontFamily="@font/gilroyregular"
                        android:textColor="#2196F3"
                        android:textSize="12sp" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageAcneBig"
                        android:layout_width="280dp"
                        android:layout_height="280dp"
                        android:layout_gravity="end|center"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="-80dp"
                        android:background="@android:color/transparent"
                        android:elevation="5dp"
                        android:scaleType="centerCrop"
                        app:shapeAppearanceOverlay="@style/circularImageView"
                        app:srcCompat="@drawable/dummy_image" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="-70dp"
                        android:layout_marginBottom="50dp"
                        app:cardBackgroundColor="#ffa000"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="5dp"
                        app:cardUseCompatPadding="true">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:src="@drawable/ic_share"
                            app:tint="@android:color/white" />

                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="-80dp"
                        android:background="@drawable/bg_circle_radius_primary"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="50dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/deskripsi"
                            android:fontFamily="@font/gilroybold"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvPenjelasan"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/penjelasan_jerawat"
                            android:fontFamily="@font/gilroyregular"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

            </FrameLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>